--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,14 @@ body {
 h2 {
     text-transform: uppercase;
 }
+
+h3{
+  padding-top: 1em;
+}
+
 #logo {
     float: left;
-    width: 4em;
+    width: 3em;
     margin: 1em;
     text-align: center;
 }
@@ -300,6 +305,17 @@ label{color: rgb(171, 171, 171);}
 .btncontact:hover{
   color: white;
   background-color: #FFB034;
+}
+
+/*============= Process ===================*/
+
+.slickProcess h3{
+  text-transform: none;
+  text-align: center;
+}
+
+.hide .row .slickProcess{
+  padding-top: 2em;
 }
 
 /*============= Tabs(not content) ===================*/
